implemented outboxPattern